k8s-ingress/ingress-traefik/ingress-resources-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-based
  #namespace:
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik
  rules:
  - host: "wear.idea.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-wear-svc  #service1
            port:
              number: 8080

  - host: "watch.idea.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-video-svc  #service2
            port:
              number: 8080
